# Snake

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Game.h  HighScoreManager.h  Snake.h  Window.h  config.h  utilities.h
src/: Board.cpp  Game.cpp  HighScoreManager.cpp  Snake.cpp  Window.cpp  main.cpp  utilities.cpp
